--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 
     <!--START: Side Navigation-->
     <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left">
-        <div ng-include="'src/sideNav/views/sideNav.partial.html'" ng-controller="sideNavController"></div>
+        <div ng-include="'./src/sideNav/views/sideNav.partial.html'" ng-controller="sideNavController"></div>
     </md-sidenav>
     <!--End: Side Navigation-->
 
