--- a/app/index.html
+++ b/app/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ChurchDesk Front-End Challenge</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/release/dist.css">
+    <link rel="stylesheet" href="release/dist.css">
 </head>
 
 <body layout="row" ng-cloak ng-controller="appController">
 
     <!--START: Side Navigation-->
     <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left">
-        <div ng-include="'./src/sideNav/views/sideNav.partial.html'" ng-controller="sideNavController"></div>
+        <div ng-include="'src/sideNav/views/sideNav.partial.html'" ng-controller="sideNavController"></div>
     </md-sidenav>
     <!--End: Side Navigation-->
 
@@ -39,7 +39,7 @@
     </md-content>
     <!--END: Content-->
 
-    <script src="/release/dist.js"></script>
+    <script src="release/dist.js"></script>
 </body>
 
 </html>
